@@ -166,14 +166,14 @@ public class RewardNode extends PhetPNode {
         if ( useSlopeInterceptForm ) {
             StraightLine line = new StraightLine( getRandomNonZeroInteger( -20, 20 ), getRandomNonZeroInteger( -20, 20 ),
                                                   getRandomNonZeroInteger( -20, 20 ),
-                                                  color, color );
+                                                  color );
             EquationFactory factory = new SlopeInterceptEquationFactory();
             node = factory.createNode( line, font );
         }
         else {
             StraightLine line = new StraightLine( getRandomNonZeroInteger( -20, 20 ), getRandomNonZeroInteger( -20, 20 ),
                                                   getRandomNonZeroInteger( -20, 20 ), getRandomNonZeroInteger( -20, 20 ),
-                                                  color, color );
+                                                  color );
             EquationFactory factory = new PointSlopeEquationFactory();
             node = factory.createNode( line, font );
         }
