@@ -150,7 +150,7 @@ class PointSlopeInteractiveEquationNode extends PhetPNode {
         // sync the model with the controls
         RichSimpleObserver lineUpdater = new RichSimpleObserver() {
             @Override public void update() {
-                interactiveLine.set( new StraightLine( rise.get(), run.get(), x1.get(), y1.get(), interactiveLine.get().color, interactiveLine.get().highlightColor ) );
+                interactiveLine.set( new StraightLine( rise.get(), run.get(), x1.get(), y1.get(), interactiveLine.get().color ) );
             }
         };
         lineUpdater.observe( rise, run, x1, y1 );
@@ -170,7 +170,7 @@ class PointSlopeInteractiveEquationNode extends PhetPNode {
     public static void main( String[] args ) {
 
         // model
-        WellDefinedLineProperty line = new WellDefinedLineProperty( new StraightLine( 3, 4, 1, 2, LGColors.INTERACTIVE_LINE, LGColors.INTERACTIVE_LINE ) );
+        WellDefinedLineProperty line = new WellDefinedLineProperty( new StraightLine( 3, 4, 1, 2, LGColors.INTERACTIVE_LINE ) );
         DoubleRange range = new DoubleRange( -10, 10 );
         Property<DoubleRange> riseRange = new Property<DoubleRange>( range );
         Property<DoubleRange> runRange = new Property<DoubleRange>( range );
